<resources>
    <string name="app_name">FirstTask</string>

    <string name="get_all_employees">Get All Employees</string>
    <string name="search_for_employee">Search For Employee</string>
    <string name="add_employee">Add Employee</string>
    <string name="update_employee">Update Employee</string>
    <string name="delete_employee">Delete Employee</string>

    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>
