<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/main_get_all_emp_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_all_employees"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/colorPrimary"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:textAllCaps="false"
            android:onClick="openEmployeesActivity"/>

        <Button
            android:id="@+id/main_search_for_emp_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_for_employee"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorPrimary"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:textAllCaps="false"
            android:onClick="openSearchActivity"/>

        <Button
            android:id="@+id/main_add_emp_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_employee"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorPrimary"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textAllCaps="false"
            android:paddingTop="10dp"
            android:onClick="openAddActivity"/>

        <Button
            android:id="@+id/main_update_emp_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_employee"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorPrimary"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textAllCaps="false"
            android:paddingTop="10dp"
            android:onClick="openUpdateActivity"/>

        <Button
            android:id="@+id/main_delete_emp_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_employee"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/colorPrimary"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textAllCaps="false"
            android:paddingTop="10dp"
            android:onClick="openDeleteActivity"/>


    </LinearLayout>

</ScrollView>